--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "@types/react": "17.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass-loader": "^12.3.0"
@@ -18,6 +19,8 @@
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@types/node": "^16.11.11",
+    "@types/react-dom": "^17.0.11",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
@@ -25,6 +28,7 @@
     "node-sass": "^6.0.1",
     "react-refresh": "^0.11.0",
     "style-loader": "^3.3.1",
+    "typescript": "^4.5.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
